Перенёс главы по протоколам (пока без схем) в отдельную папку и сделал для них отдельный "главный" файл для ускорения сборки.

--- a/.gitignore
+++ b/.gitignore
@@ -30,10 +30,10 @@
 *.vrb
 *.xdy
 *.tdo
-/*.pdf
-/*.tps
-/.project
-/.settings/
-/Information Security.run.xml
+*.tps
 *.bcf
 *.run.xml
+Information Security.pdf
+index_only.pdf
+.project
+/.settings/
